--- a/src/app/detalle-producto/detalle-producto.page.html
+++ b/src/app/detalle-producto/detalle-producto.page.html
@@ -9,19 +9,50 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-img
-  src="https://docs-demo.ionic.io/assets/madison.jpg"
-></ion-img>
-
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">detalleProducto</ion-title>
+      <ion-title size="large">detalleProductos</ion-title>
     </ion-toolbar>
   </ion-header>
 
+  <img alt="Silhouette of mountains" [src]="producto?.imagen" />
+
+  <ion-card>
+    <ion-card-header>
+      <ion-card-title>{{producto?.nombre}}</ion-card-title>
+      <ion-card-subtitle>{{producto?.categoria}}</ion-card-subtitle>
+    </ion-card-header>
+
+    <ion-card-content>
+      <div [innerHTML]="producto?.descripcion"></div>
+    </ion-card-content>
+  </ion-card>
+
+  <ion-toolbar>
+
+    <ion-buttons slot="start">
+      <ion-button size="large">
+        <ion-icon src="../../assets/icon/remove-circle-outline.svg"></ion-icon>
+      </ion-button>
+    </ion-buttons>
+
+    <ion-title [style]="'text-align:center'">
+      <ion-button shape="round">
+        1
+      </ion-button>
+    </ion-title>
+
+    <ion-buttons slot="end">
+      <ion-button size="large">
+        <ion-icon src="../../assets/icon/add-circle-outline.svg"></ion-icon>
+      </ion-button>
+    </ion-buttons>
+  </ion-toolbar>
 
 </ion-content>
+
+
 <ion-footer>
   <ion-button expand="block">
     AGREGAR AL CARRITO
