--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,11 +11,16 @@
         <ion-menu-toggle>
           <ion-item button [routerLink]="['/principal']">
             <ion-label>Principal</ion-label>
-         </ion-item>
+          </ion-item>
 
-         <ion-item button [routerLink]="['/lista-productos']">
+          <ion-item button [routerLink]="['/lista-productos']">
             <ion-label>Lista de Productos</ion-label>
-            </ion-item>
+          </ion-item>
+
+          <ion-item button [routerLink]="['/carrito-compras']">
+            <ion-label>Carrito</ion-label>
+          </ion-item>
+
         </ion-menu-toggle>
       </ion-list>
 
