--- a/src/app/lista-productos/lista-productos.page.html
+++ b/src/app/lista-productos/lista-productos.page.html
@@ -18,7 +18,7 @@
   <ion-list>
     @for (producto of listaProductos; track producto.id) {
 
-      <ion-item button [routerLink] ="['/detalle-producto']">
+      <ion-item button [routerLink] ="['/detalle-producto/'+producto.id]">
         <ion-thumbnail slot="start">
           <img [src]="producto.imagen" />
         </ion-thumbnail>
